// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonGroup> that renders a button should add classes when props are changed 1`] = `
<div>
  <div
    class="ButtonGroup ButtonGroup--isBlock"
    role="group"
  >
    <button
      class="Button Button--isPrimary Button--size_large ButtonGroup__button ButtonGroup__button--isBlock ButtonGroup__button--isPrimary ButtonGroup__button--first"
      type="button"
    >
      A button
    </button>
    <button
      class="Button Button--isPrimary Button--size_large ButtonGroup__button ButtonGroup__button--isBlock ButtonGroup__button--isPrimary ButtonGroup__button--last"
      type="button"
    >
      Another button
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup> that renders a button should pass main props if child is array with size one 1`] = `
<div>
  <div
    class="ButtonGroup ButtonGroup--isBlock"
    role="group"
  >
    <button
      class="Button Button--isPrimary Button--isBlock Button--size_small"
      type="button"
    >
      A button
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup> that renders a button should pass main props, but not add styles if there is only 1 child 1`] = `
<div>
  <div
    class="ButtonGroup ButtonGroup--isBlock"
    role="group"
  >
    <button
      class="Button Button--isPrimary Button--isBlock Button--size_small"
      type="button"
    >
      A button
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup> that renders a button should render default button correctly 1`] = `
<div>
  <div
    class="ButtonGroup"
    role="group"
  >
    <button
      class="Button Button--isPrimary ButtonGroup__button ButtonGroup__button--isPrimary ButtonGroup__button--first"
      type="button"
    >
      A button
    </button>
    <button
      class="Button Button--isPrimary ButtonGroup__button ButtonGroup__button--isPrimary ButtonGroup__button--last"
      type="button"
    >
      Another button
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup> that renders a button should render with conditional JSX 1`] = `
<div>
  <div
    class="ButtonGroup"
    role="group"
  >
    <button
      class="Button Button--isPrimary ButtonGroup__button ButtonGroup__button--isPrimary ButtonGroup__button--first"
      type="button"
    >
      A button
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup> that renders a button should support mixed element types 1`] = `
<div>
  <div
    class="ButtonGroup ButtonGroup--isBlock"
    role="group"
  >
    <button
      class="Button Button--isPrimary Button--size_large ButtonGroup__button ButtonGroup__button--isBlock ButtonGroup__button--isPrimary ButtonGroup__button--first"
      type="button"
    >
      A button
    </button>
    <a
      class="Button Button--isPrimary Button--size_large ButtonGroup__button ButtonGroup__button--isBlock ButtonGroup__button--isPrimary"
      href="#"
    >
      An anchor
    </a>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label downshift-0-toggle-button"
      class="Button Button--isPrimary Button--size_large ButtonGroup__button ButtonGroup__button--isBlock ButtonGroup__button--isPrimary ButtonGroup__button--last"
      id="downshift-0-toggle-button"
      type="button"
    >
      A dropdown button
    </button>
    <ul
      aria-labelledby="downshift-0-label"
      class="List"
      id="downshift-0-menu"
      role="listbox"
      tabindex="-1"
    />
  </div>
</div>
`;
